bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Article__c.field-meta.xml
<CustomField>
    <fullName>AFH_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the linked Knowledge article associated with the record.</description>
    <label>Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>