bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Article_Content__c.field-meta.xml
<CustomField>
    <fullName>AFH_Article_Content__c</fullName>
    <description>Stores the video content or rich-media section displayed on the Recipe Detail page.</description>
    <label>Video Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>