bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Article_Contents__c.field-meta.xml
<CustomField>
    <fullName>AFH_Article_Contents__c</fullName>
    <description>Stores the full article content in rich text format.</description>
    <label>Article Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>