bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Brand__c.field-meta.xml
<CustomField>
    <fullName>AFH_Brand__c</fullName>
    <description>Stores the selected brands associated with the record. Multiple brands can be chosen.</description>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walkers</fullName>
            </value>
            <value>
                <fullName>Doritos</fullName>
            </value>
            <value>
                <fullName>Pipers</fullName>
            </value>
            <value>
                <fullName>Quaker</fullName>
            </value>
            <value>
                <fullName>Doritos Loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>