bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>AFH_Button_Name__c</fullName>
    <description>Stores the name or label of the button displayed to users.</description>
    <label>Button Name</label>
    <type>TextArea</type>
</CustomField>