bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Channel_Type__c</fullName>
    <description>Stores the channels through which the customer interacts. Multiple channels can be selected.</description>
    <label>Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast food</fullName>
            </value>
            <value>
                <fullName>Casual dining</fullName>
            </value>
            <value>
                <fullName>Coffee shop / Cafe</fullName>
            </value>
            <value>
                <fullName>Pub / Bar</fullName>
            </value>
            <value>
                <fullName>Leisure / Rec</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Workplace</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Care home</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>