bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_FAQ_Link__c.field-meta.xml
<CustomField>
    <fullName>AFH_FAQ_Link__c</fullName>
    <description>Stores the URL link used for redirecting users to the related page.</description>
    <label>FAQ Link</label>
    <type>Url</type>
</CustomField>