bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Highlight__c.field-meta.xml
<CustomField>
    <fullName>AFH_Highlight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the record should be highlighted.</description>
    <label>Highlight</label>
    <type>Checkbox</type>
</CustomField>