bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Highlighted__c.field-meta.xml
<CustomField>
    <fullName>AFH_Highlighted__c</fullName>
    <description>Stores the selected highlight tags used to categorize or emphasize the record in the UI. Multiple values can be selected.</description>
    <label>Highlighted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HomePage</fullName>
            </value>
            <value>
                <fullName>Brand Hub</fullName>
            </value>
            <value>
                <fullName>Brand Page Doritos</fullName>
            </value>
            <value>
                <fullName>Brand Page Pipers</fullName>
            </value>
            <value>
                <fullName>Brand Page Walkers</fullName>
            </value>
            <value>
                <fullName>Brand Page Quakers</fullName>
                <isActive>true</isActive>
                <label>Brand Page Quakers</label>
            </value>
            <value>
                <fullName>Brand Page Quaker</fullName>
                <isActive>true</isActive>
                <label>Brand Page Quaker</label>
            </value>
            <value>
                <fullName>Recipe Page</fullName>
            </value>
            <value>
                <fullName>ThankYou</fullName>
            </value>
            <value>
                <fullName>MenuBar</fullName>
            </value>
            <value>
                <fullName>MarketingPage</fullName>
            </value>
            <value>
                <fullName>Article Hub</fullName>
            </value>
            <value>
                <fullName>Recipe Hub</fullName>
            </value>
            <value>
                <fullName>Doritos Loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>