bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Introduction__c.field-meta.xml
<CustomField>
    <fullName>AFH_Introduction__c</fullName>
    <description>Brief introductory text for the article displayed at the top of the Article Detail page</description>
    <label>Introduction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>