bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Key_Takeaways__c.field-meta.xml
<CustomField>
    <fullName>AFH_Key_Takeaways__c</fullName>
    <description>Stores the key takeaways displayed on the Article Detail page.</description>
    <label>Key Takeaways</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>