bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Reading_Time__c.field-meta.xml
<CustomField>
    <fullName>AFH_Reading_Time__c</fullName>
    <description>Stores the estimated reading time for the article in minutes.</description>
    <label>Reading Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>