bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Recipe_Overview__c.field-meta.xml
<CustomField>
    <fullName>AFH_Recipe_Overview__c</fullName>
    <description>Stores the brief overview of the recipe displayed on the Recipe Detail page.</description>
    <label>Recipe Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>