bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Sequence_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>AFH_Sequence_Subtitle__c</fullName>
    <description>Controls the display order of article sections on the Article Detail page. Lower numbers appear first.</description>
    <label>Sequence Subtitle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>