bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/AFH_Type__c.field-meta.xml
<CustomField>
    <fullName>AFH_Type__c</fullName>
    <description>Stores the type of content, such as Recipe or Article, selected from predefined options.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recipe</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>