bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Stores the detailed answer content for the FAQ article.</description>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>