bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <description>Stores the detailed list of ingredients.</description>
    <label>Ingredients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>