bundled_metadata/force-app/main/default/objects/Knowledge__kav/fields/Methods__c.field-meta.xml
<CustomField>
    <fullName>Methods__c</fullName>
    <description>Stores the instructions displayed on the Recipe Detail page.</description>
    <label>Methods</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>