bundled_metadata/force-app/main/default/objects/Knowledge__kav/recordTypes/AFH_Article.recordType-meta.xml
<RecordType>
    <fullName>AFH_Article</fullName>
    <active>true</active>
    <description>AFH Article Hub content</description>
    <label>Article</label>
</RecordType>