bundled_metadata/force-app/main/default/objects/Knowledge__kav/recordTypes/AFH_Recipe.recordType-meta.xml
<RecordType>
    <fullName>AFH_Recipe</fullName>
    <active>true</active>
    <description>This is use for Recipe</description>
    <label>Recipe</label>
</RecordType>