bundled_metadata/force-app/main/default/objects/Knowledge__kav/listViews/Articles.listView-meta.xml
<ListView>
    <fullName>Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
  
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>AFH_Article__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.AFH_Article</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>AFH_Brand__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Articles</label>
</ListView>