bundled_metadata/force-app/main/default/objects/Knowledge__kav/listViews/Recipe.listView-meta.xml
<ListView>
    <fullName>Recipe</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
   
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.AFH_Recipe</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Recipe</label>
</ListView>